# audible_api_rs

./: Cargo.toml
src/: lib.rs
src/api/: mod.rs
src/api/exceptions/: api_exceptions.rs  error_exceptions.rs  mod.rs
src/common/: enums.rs
