[package]
name = "audible_api_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
tokio-test = { version = "0.4.4" }

[dev-dependencies]
tokio-test = { version = "0.4.4" }
